--- a/category.html
+++ b/category.html
@@ -10,15 +10,13 @@
 <body>
 
 <!-- ✅ Header + Mega-meny -->
-<header>
+<header class="main-header">
   <div class="nav-container">
     <a href="index.html" class="logo">BrandRadar</a>
-    <nav class="mega-menu">
-      <!-- Mega-meny beholdes fra script.js -->
-    </nav>
-    <div class="mobile-menu-toggle">☰</div>
+    <nav class="mega-menu"></nav>
   </div>
 </header>
+
 
 <!-- ✅ Dynamisk kategori-tittel -->
 <section class="category-header">
