--- a/favoritter.html
+++ b/favoritter.html
@@ -9,22 +9,12 @@
 <body>
   <!-- HEADER -->
   <header class="main-header">
-    <div class="header-inner">
-      <div class="logo">BrandRadar</div>
+  <div class="nav-container">
+    <a href="index.html" class="logo">BrandRadar</a>
+    <nav class="mega-menu"></nav>
+  </div>
+</header>
 
-      <div class="search-box">
-        <input type="text" placeholder="Søk produkter eller merker..." />
-        <button>🔍</button>
-      </div>
-
-      <nav class="main-nav">
-        <a href="index.html">Home</a>
-        <a href="news.html">News</a>
-        <a href="brands.html">Brands</a>
-        <a href="favoritter.html" class="active">Favoritter</a>
-      </nav>
-    </div>
-  </header>
 
    <!-- NAV WRAP (ny container) -->
 <div class="nav-wrap">
