--- a/category.html
+++ b/category.html
@@ -13,9 +13,16 @@
 <header class="main-header">
   <div class="nav-container">
     <a href="index.html" class="logo">BrandRadar</a>
+
+    <div class="search-box">
+      <input type="text" placeholder="Søk produkter eller merker..." />
+      <button>🔍</button>
+    </div>
+
     <nav class="mega-menu"></nav>
   </div>
 </header>
+
 
 
 <!-- ✅ Dynamisk kategori-tittel -->
