--- a/favoritter.html
+++ b/favoritter.html
@@ -8,12 +8,19 @@
 </head>
 <body>
   <!-- HEADER -->
-  <header class="main-header">
+ <header class="main-header">
   <div class="nav-container">
     <a href="index.html" class="logo">BrandRadar</a>
+
+    <div class="search-box">
+      <input type="text" placeholder="Søk produkter eller merker..." />
+      <button>🔍</button>
+    </div>
+
     <nav class="mega-menu"></nav>
   </div>
 </header>
+
 
 
    <!-- NAV WRAP (ny container) -->
