--- a/news.html
+++ b/news.html
@@ -9,22 +9,18 @@
 <body>
   <!-- HEADER -->
 <header class="main-header">
-  <div class="header-inner">
-    <div class="logo">BrandRadar</div>
+  <div class="nav-container">
+    <a href="index.html" class="logo">BrandRadar</a>
 
     <div class="search-box">
       <input type="text" placeholder="Søk produkter eller merker..." />
       <button>🔍</button>
     </div>
 
-    <nav class="main-nav">
-      <a href="index.html">Home</a>
-      <a href="news.html">News</a>
-      <a href="brands.html">Brands</a>
-      <a href="favoritter.html">Favoritter</a>
-    </nav>
+    <nav class="mega-menu"></nav>
   </div>
 </header>
+
 
  <!-- NAV WRAP (ny container) -->
 <div class="nav-wrap">
