--- a/brands.html
+++ b/brands.html
@@ -15,6 +15,16 @@
   </div>
 </header>
 
+<!-- CATEGORY BAR -->
+<div class="category-bar">
+  <ul class="category-list">
+    <li class="category-item" data-category="Clothing">Klær</li>
+    <li class="category-item" data-category="Shoes">Sko</li>
+    <li class="category-item" data-category="Gymcorner">Gymcorner</li>
+    <li class="category-item" data-category="Accessories">Tilbehør</li>
+    <li class="category-item" data-category="Selfcare">Selfcare</li>
+  </ul>
+</div>
 
  <!-- NAV WRAP (ny container) -->
 <div class="nav-wrap">
