--- a/category.html
+++ b/category.html
@@ -23,6 +23,16 @@
   </div>
 </header>
 
+<!-- CATEGORY BAR -->
+<div class="category-bar">
+  <ul class="category-list">
+    <li class="category-item" data-category="Clothing">Klær</li>
+    <li class="category-item" data-category="Shoes">Sko</li>
+    <li class="category-item" data-category="Gymcorner">Gymcorner</li>
+    <li class="category-item" data-category="Accessories">Tilbehør</li>
+    <li class="category-item" data-category="Selfcare">Selfcare</li>
+  </ul>
+</div>
 
 
 <!-- ✅ Dynamisk kategori-tittel -->
