--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
   </div>
 </header>
 
+  <!-- CATEGORY BAR -->
+<div class="category-bar">
+  <ul class="category-list">
+    <li class="category-item" data-category="Clothing">Klær</li>
+    <li class="category-item" data-category="Shoes">Sko</li>
+    <li class="category-item" data-category="Gymcorner">Gymcorner</li>
+    <li class="category-item" data-category="Accessories">Tilbehør</li>
+    <li class="category-item" data-category="Selfcare">Selfcare</li>
+  </ul>
+</div>
+
 
  <!-- NAV WRAP (ny container) -->
 <div class="nav-wrap">
@@ -120,6 +131,7 @@
 
 </body>
 </html>
+
 
 
 
