--- a/brands.html
+++ b/brands.html
@@ -129,6 +129,7 @@
   <script src="script-brands.js"></script>
   <script src="script-favorites.js"></script>
   <script src="script.js"></script>
+  <script src="script-megamenu.js"></script>
 </body>
 </html>
 
