--- a/category.html
+++ b/category.html
@@ -50,6 +50,7 @@
 
 <script src="script.js"></script>
 <script src="category.js"></script>
+  <script src="script-megamenu.js"></script>
 
 </body>
 </html>
