--- a/favoritter.html
+++ b/favoritter.html
@@ -125,6 +125,7 @@
   <script src="script-favorites.js"></script>
   <script src="script-favorites-page.js"></script>
   <script src="script.js"></script>
+  <script src="script-megamenu.js"></script>
 </body>
 </html>
 
