--- a/index.html
+++ b/index.html
@@ -127,10 +127,12 @@
 
 <script src="script-index.js"></script>
 <script src="script.js"></script>
+  <script src="script-megamenu.js"></script>
 <script src="script-favorites.js"></script>
 
 </body>
 </html>
+
 
 
 
