--- a/news.html
+++ b/news.html
@@ -149,6 +149,7 @@
 
   <!-- 🧠 Scripts -->
   <script src="script.js"></script>
+  <script src="script-megamenu.js"></script>
   <script src="partnerBanner.js"></script>
   <script src="deals.js"></script>
   <script src="picks.js"></script>
