--- a/product.html
+++ b/product.html
@@ -61,6 +61,7 @@
 
 
   <script src="script.js"></script>
+  <script src="script-megamenu.js"></script>
   <script src="product.js"></script>
  <script src="script-favorites.js"></script>
 <script>
