--- a/brands.html
+++ b/brands.html
@@ -7,24 +7,37 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- HEADER -->
-  <header class="main-header">
+ <!-- ✅ NY HEADER -->
+<header class="main-header">
   <div class="nav-container">
-    <a href="index.html" class="logo">BrandRadar</a>
-    <nav class="mega-menu"></nav>
-  </div>
-</header>
 
-<!-- CATEGORY BAR -->
-<div class="category-bar">
-  <ul class="category-list">
+    <a href="index.html" class="logo">BRANDRADAR</a>
+
+    <div class="search-box">
+      <input type="text" placeholder="Søk produkter eller merker..." />
+      <button>🔍</button>
+    </div>
+
+    <!-- Toppmeny -->
+    <nav class="top-links">
+      <a href="index.html">Hjem</a>
+      <a href="news.html">Nyheter</a>
+      <a href="brands.html">Brands</a>
+      <a href="favoritter.html">Favoritter</a>
+    </nav>
+
+  </div>
+
+  <!-- 🔽 Kategorier som åpner megamenu -->
+  <ul class="category-bar">
     <li class="category-item" data-category="Clothing">Klær</li>
     <li class="category-item" data-category="Shoes">Sko</li>
     <li class="category-item" data-category="Gymcorner">Gymcorner</li>
     <li class="category-item" data-category="Accessories">Tilbehør</li>
     <li class="category-item" data-category="Selfcare">Selfcare</li>
   </ul>
-</div>
+</header>
+
  
   <!-- BRAND SEARCH -->
   <section class="brand-search">
