--- a/category.html
+++ b/category.html
@@ -9,30 +9,37 @@
 
 <body>
 
-<!-- ✅ Header + Mega-meny -->
+<!-- ✅ NY HEADER -->
 <header class="main-header">
   <div class="nav-container">
-    <a href="index.html" class="logo">BrandRadar</a>
+
+    <a href="index.html" class="logo">BRANDRADAR</a>
 
     <div class="search-box">
       <input type="text" placeholder="Søk produkter eller merker..." />
       <button>🔍</button>
     </div>
 
-    <nav class="mega-menu"></nav>
-  </div>
-</header>
+    <!-- Toppmeny -->
+    <nav class="top-links">
+      <a href="index.html">Hjem</a>
+      <a href="news.html">Nyheter</a>
+      <a href="brands.html">Brands</a>
+      <a href="favoritter.html">Favoritter</a>
+    </nav>
 
-<!-- CATEGORY BAR -->
-<div class="category-bar">
-  <ul class="category-list">
+  </div>
+
+  <!-- 🔽 Kategorier som åpner megamenu -->
+  <ul class="category-bar">
     <li class="category-item" data-category="Clothing">Klær</li>
     <li class="category-item" data-category="Shoes">Sko</li>
     <li class="category-item" data-category="Gymcorner">Gymcorner</li>
     <li class="category-item" data-category="Accessories">Tilbehør</li>
     <li class="category-item" data-category="Selfcare">Selfcare</li>
   </ul>
-</div>
+</header>
+
 
 
 <!-- ✅ Dynamisk kategori-tittel -->
