--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     <li class="category-item" data-category="Selfcare">Selfcare</li>
   </ul>
 </header>
-
+  
+<!-- ✅ Manglet – MEGA-MENYEN LASTES HER -->
+<nav class="mega-menu"></nav>
 
 <!-- FEATURED PRODUCTS SECTION -->
 <section class="featured-products">
@@ -54,6 +56,7 @@
 
 </body>
 </html>
+
 
 
 
