--- a/favoritter.html
+++ b/favoritter.html
@@ -38,6 +38,8 @@
   </ul>
 </header>
 
+  <!-- ✅ Manglet – MEGA-MENYEN LASTES HER -->
+<nav class="mega-menu"></nav>
 
   <!-- FAVORITTER -->
   <section class="favorites-section">
