--- a/brands.html
+++ b/brands.html
@@ -38,6 +38,8 @@
   </ul>
 </header>
 
+  <!-- ✅ Manglet – MEGA-MENYEN LASTES HER -->
+<nav class="mega-menu"></nav>
  
   <!-- BRAND SEARCH -->
   <section class="brand-search">
