--- a/category.html
+++ b/category.html
@@ -40,7 +40,8 @@
   </ul>
 </header>
 
-
+<!-- ✅ Manglet – MEGA-MENYEN LASTES HER -->
+<nav class="mega-menu"></nav>
 
 <!-- ✅ Dynamisk kategori-tittel -->
 <section class="category-header">
