--- a/news.html
+++ b/news.html
@@ -38,6 +38,8 @@
   </ul>
 </header>
 
+  <!-- ✅ Manglet – MEGA-MENYEN LASTES HER -->
+<nav class="mega-menu"></nav>
 
   <!-- 🔽 MAIN INNHOLD -->
   <main class="news-page">
