--- a/product.html
+++ b/product.html
@@ -22,6 +22,9 @@
   </div>
 </header>
 
+  <!-- ✅ Manglet – MEGA-MENYEN LASTES HER -->
+<nav class="mega-menu"></nav>
+
 <!-- CATEGORY BAR -->
 <div class="category-bar">
   <ul class="category-list">
