--- a/mega-menu.html
+++ b/mega-menu.html
@@ -7,8 +7,10 @@
   <li data-menu="selfcare">Selfcare</li>
 </ul>
 
-<!-- ✅ Klær -->
+<!-- ✅ MEGA-MENY – KLÆR -->
 <div class="menu-panel" id="clothing">
+
+  <!-- ✅ Herre -->
   <div class="menu-section">
     <h4>Herre</h4>
     <ul>
@@ -18,38 +20,78 @@
       <li><a href="category.html?main_category=Clothing&gender=Men&subcategory=Jeans">Jeans</a></li>
       <li><a href="category.html?main_category=Clothing&gender=Men&subcategory=Jackets">Jakker</a></li>
       <li><a href="category.html?main_category=Clothing&gender=Men&subcategory=Gymwear">Gymwear</a></li>
+      <li><a href="category.html?main_category=Clothing&gender=Men&subcategory=Dresswear">Dress & pentøy</a></li>
+      <li><a href="category.html?main_category=Clothing&gender=Men&subcategory=Underwear">Undertøy & sokker</a></li>
+      <li><a href="category.html?main_category=Clothing&gender=Men&subcategory=Sport">Sport</a></li>
+      <li><a href="category.html?main_category=Clothing&gender=Men&subcategory=Onepiece">Onepiece</a></li>
+    </ul>
+
+    <p class="menu-subtitle">Populære merker</p>
+    <ul>
+      <li><a href="brands.html?brand=Gant">Gant</a></li>
+      <li><a href="brands.html?brand=Polo Ralph Lauren">Ralph Lauren</a></li>
+      <li><a href="brands.html?brand=Tommy Hilfiger">Tommy Hilfiger</a></li>
+      <li><a href="brands.html?brand=Tiger of Sweden">Tiger of Sweden</a></li>
+      <li><a href="brands.html?brand=Levi's">Levi’s</a></li>
     </ul>
   </div>
 
+  <!-- ✅ Dame -->
   <div class="menu-section">
     <h4>Dame</h4>
     <ul>
-      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Outerwear">Jakker & kåper</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Cardigans">Cardigans</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Tshirts">T-skjorter & topper</a></li>
+      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Outerwear">Jakker & blazere</a></li>
+      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Knitwear">Cardigans</a></li>
+      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Tops">T-skjorter & topper</a></li>
       <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Dresses">Kjoler</a></li>
       <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Jeans">Jeans</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Gymwear">Gymwear</a></li>
+      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Pants">Bukser</a></li>
+      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Coats">Kåper</a></li>
+      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Skirts">Skjørt</a></li>
+      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Hoodies">Gensere & hoodies</a></li>
+      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Sport">Sport</a></li>
+      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Underwear">Undertøy & sokker</a></li>
+    </ul>
+
+    <p class="menu-subtitle">Populære merker</p>
+    <ul>
+      <li><a href="brands.html?brand=Gant">Gant</a></li>
+      <li><a href="brands.html?brand=Levi's">Levi’s</a></li>
+      <li><a href="brands.html?brand=Hugo Boss">Hugo Boss</a></li>
+      <li><a href="brands.html?brand=Guess">Guess</a></li>
+      <li><a href="brands.html?brand=Only">ONLY</a></li>
     </ul>
   </div>
 
+  <!-- ✅ Barn -->
   <div class="menu-section">
     <h4>Barn</h4>
+
     <p class="menu-subtitle">Jente</p>
     <ul>
-      <li><a href="category.html?main_category=Clothing&gender=Kids&kidtype=Jente&subcategory=Jackets_YT">Yttertøy</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Kids&kidtype=Jente&subcategory=Cardigans">Gensere og cardigans</a></li>
+      <li><a href="category.html?main_category=Clothing&gender=Kids&kidtype=Jente&subcategory=Outerwear">Yttertøy</a></li>
+      <li><a href="category.html?main_category=Clothing&gender=Kids&kidtype=Jente&subcategory=Knitwear">Gensere & cardigans</a></li>
       <li><a href="category.html?main_category=Clothing&gender=Kids&kidtype=Jente&subcategory=Sport">Sport & trening</a></li>
     </ul>
 
     <p class="menu-subtitle">Gutt</p>
     <ul>
-      <li><a href="category.html?main_category=Clothing&gender=Kids&kidtype=Gutt&subcategory=Jackets_YT">Yttertøy</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Kids&kidtype=Gutt&subcategory=Cardigans">Gensere og cardigans</a></li>
+      <li><a href="category.html?main_category=Clothing&gender=Kids&kidtype=Gutt&subcategory=Outerwear">Yttertøy</a></li>
+      <li><a href="category.html?main_category=Clothing&gender=Kids&kidtype=Gutt&subcategory=Knitwear">Gensere & cardigans</a></li>
       <li><a href="category.html?main_category=Clothing&gender=Kids&kidtype=Gutt&subcategory=Sport">Sport & trening</a></li>
+    </ul>
+
+    <p class="menu-subtitle">Populære merker</p>
+    <ul>
+      <li><a href="brands.html?brand=Name It">Name It</a></li>
+      <li><a href="brands.html?brand=Lindex">Lindex</a></li>
+      <li><a href="brands.html?brand=GAP">GAP</a></li>
+      <li><a href="brands.html?brand=Friboo">Friboo</a></li>
+      <li><a href="brands.html?brand=Tommy Hilfiger">Tommy Hilfiger</a></li>
     </ul>
   </div>
 </div>
+
 
 <!-- ✅ Sko -->
 <div class="menu-panel" id="shoes">
