--- a/mega-menu.html
+++ b/mega-menu.html
@@ -95,38 +95,62 @@
 
 <!-- ✅ Sko -->
 <div class="menu-panel" id="shoes">
+  <!-- Herre -->
   <div class="menu-section">
     <h4>Herre</h4>
     <ul>
       <li><a href="category.html?main_category=Shoes&gender=Men&subcategory=Sneakers">Sneakers</a></li>
       <li><a href="category.html?main_category=Shoes&gender=Men&subcategory=Boots">Boots & støvler</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Men&subcategory=Sports">Sportssko</a></li>
+      <li><a href="category.html?main_category=Shoes&gender=Men&subcategory=Oxfords">Snøresko / Pensko</a></li>
+      <li><a href="category.html?main_category=Shoes&gender=Men&subcategory=Loafers">Lave sko</a></li>
+      <li><a href="category.html?main_category=Shoes&gender=Men&subcategory=Sandals">Sandaler / Åpne sko</a></li>
+      <li><a href="category.html?main_category=Shoes&gender=Men&subcategory=Slippers">Tøfler</a></li>
+      <li><a href="category.html?main_category=Shoes&gender=Men&subcategory=Sport">Sportssko</a></li>
+      <li><a href="category.html?main_category=Shoes&gender=Men&subcategory=Hiking">Tursko</a></li>
     </ul>
   </div>
 
+  <!-- Dame -->
   <div class="menu-section">
     <h4>Dame</h4>
     <ul>
       <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=Sneakers">Sneakers</a></li>
       <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=HighBoots">Støvletter</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=Heels">Pumps</a></li>
+      <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=Boots">Boots</a></li>
+      <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=Heels">Høye hæler / Pumps</a></li>
+      <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=Flats">Flate sko</a></li>
+      <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=SlipIns">Slip-ins & tresko</a></li>
+      <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=Slippers">Tøfler</a></li>
+      <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=Sport">Sportssko</a></li>
+      <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=Hiking">Tursko</a></li>
+      <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=Slides">Sandaler / Badesko</a></li>
     </ul>
   </div>
 
+  <!-- Barn -->
   <div class="menu-section">
     <h4>Barn</h4>
+
     <p class="menu-subtitle">Jente</p>
     <ul>
       <li><a href="category.html?main_category=Shoes&gender=Kids&kidtype=Jente&subcategory=Girl_Sneakers">Sneakers</a></li>
       <li><a href="category.html?main_category=Shoes&gender=Kids&kidtype=Jente&subcategory=Girl_Boots">Støvler & støvletter</a></li>
     </ul>
+
     <p class="menu-subtitle">Gutt</p>
     <ul>
       <li><a href="category.html?main_category=Shoes&gender=Kids&kidtype=Gutt&subcategory=Boy_Sneakers">Sneakers</a></li>
       <li><a href="category.html?main_category=Shoes&gender=Kids&kidtype=Gutt&subcategory=Boy_Boots">Støvler & støvletter</a></li>
     </ul>
+
+    <p class="menu-subtitle">Handle etter størrelse</p>
+    <ul>
+      <li><a href="category.html?main_category=Shoes&gender=Kids&sizetype=Kids21-34">Barn (str. 21-34)</a></li>
+      <li><a href="category.html?main_category=Shoes&gender=Kids&sizetype=Kids35-42">Ungdom (str. 35-42)</a></li>
+    </ul>
   </div>
 </div>
+
 
 <!-- ✅ Gymcorner -->
 <div class="menu-panel" id="gymcorner">
