--- a/mega-menu.html
+++ b/mega-menu.html
@@ -140,7 +140,7 @@
     <p class="menu-subtitle">Gutt</p>
     <ul>
       <li><a href="category.html?main_category=Shoes&gender=Kids&kidtype=Gutt&subcategory=Boy_Sneakers">Sneakers</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Kids&kidtype=Gutt&subcategory=Boy_Boots">Støvler & støvletter</a></li>
+      <li><a href="category.html?main_category=Shoes&gender=Kids&kidtype=Gutt&subcategory=Boy_Boots">Støvler</a></li>
     </ul>
 
     <p class="menu-subtitle">Handle etter størrelse</p>
