--- a/mega-menu.html
+++ b/mega-menu.html
@@ -94,61 +94,102 @@
 
 
 <!-- ✅ Sko -->
+<!-- ✅ SKO -->
 <div class="menu-panel" id="shoes">
-  <!-- Herre -->
-  <div class="menu-section">
-    <h4>Herre</h4>
-    <ul>
-      <li><a href="category.html?main_category=Shoes&gender=Men&subcategory=Sneakers">Sneakers</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Men&subcategory=Boots">Boots & støvler</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Men&subcategory=Oxfords">Snøresko / Pensko</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Men&subcategory=Loafers">Lave sko</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Men&subcategory=Sandals">Sandaler / Åpne sko</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Men&subcategory=Slippers">Tøfler</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Men&subcategory=Sport">Sportssko</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Men&subcategory=Hiking">Tursko</a></li>
-    </ul>
+
+  <!-- MENN -->
+  <div class="menu-block">
+    <div class="menu-section">
+      <h4>Herre</h4>
+      <ul>
+        <li><a href="#">Sneakers</a></li>
+        <li><a href="#">Boots & støvler</a></li>
+        <li><a href="#">Snøresko / Pensko</a></li>
+        <li><a href="#">Flate sko</a></li>
+        <li><a href="#">Sandaler / Åpne sko</a></li>
+        <li><a href="#">Tøfler</a></li>
+        <li><a href="#">Sportssko</a></li>
+        <li><a href="#">Tursko</a></li>
+      </ul>
+    </div>
+
+    <div class="menu-section brands">
+      <h4>Toppmerker</h4>
+      <ul>
+        <li><a href="#">Birkenstock</a></li>
+        <li><a href="#">Vagabond</a></li>
+        <li><a href="#">adidas</a></li>
+        <li><a href="#">Converse</a></li>
+        <li><a href="#">Salomon</a></li>
+      </ul>
+    </div>
   </div>
 
-  <!-- Dame -->
-  <div class="menu-section">
-    <h4>Dame</h4>
-    <ul>
-      <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=Sneakers">Sneakers</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=HighBoots">Støvletter</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=Boots">Boots</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=Heels">Høye hæler / Pumps</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=Flats">Flate sko</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=SlipIns">Slip-ins & tresko</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=Slippers">Tøfler</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=Sport">Sportssko</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=Hiking">Tursko</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Women&subcategory=Slides">Sandaler / Badesko</a></li>
-    </ul>
+  <!-- DAME -->
+  <div class="menu-block">
+    <div class="menu-section">
+      <h4>Dame</h4>
+      <ul>
+        <li><a href="#">Sneakers</a></li>
+        <li><a href="#">Støvletter</a></li>
+        <li><a href="#">Boots</a></li>
+        <li><a href="#">Høye hæler / Pumps</a></li>
+        <li><a href="#">Flate sko</a></li>
+        <li><a href="#">Slip-ins</a></li>
+        <li><a href="#">Tøfler</a></li>
+        <li><a href="#">Sportssko</a></li>
+        <li><a href="#">Tursko</a></li>
+        <li><a href="#">Sandaler / Badesko</a></li>
+      </ul>
+    </div>
+
+    <div class="menu-section brands">
+      <h4>Toppmerker</h4>
+      <ul>
+        <li><a href="#">Vagabond</a></li>
+        <li><a href="#">UGG</a></li>
+        <li><a href="#">New Balance</a></li>
+        <li><a href="#">Birkenstock</a></li>
+        <li><a href="#">adidas</a></li>
+      </ul>
+    </div>
   </div>
 
-  <!-- Barn -->
-  <div class="menu-section">
-    <h4>Barn</h4>
+  <!-- BARN -->
+  <div class="menu-block">
+    <div class="menu-section">
+      <h4>Barn</h4>
 
-    <p class="menu-subtitle">Jente</p>
-    <ul>
-      <li><a href="category.html?main_category=Shoes&gender=Kids&kidtype=Jente&subcategory=Girl_Sneakers">Sneakers</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Kids&kidtype=Jente&subcategory=Girl_Boots">Støvler & støvletter</a></li>
-    </ul>
+      <p class="menu-subtitle">Jente</p>
+      <ul>
+        <li><a href="#">Sneakers</a></li>
+        <li><a href="#">Støvler & støvletter</a></li>
+      </ul>
 
-    <p class="menu-subtitle">Gutt</p>
-    <ul>
-      <li><a href="category.html?main_category=Shoes&gender=Kids&kidtype=Gutt&subcategory=Boy_Sneakers">Sneakers</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Kids&kidtype=Gutt&subcategory=Boy_Boots">Støvler</a></li>
-    </ul>
+      <p class="menu-subtitle">Gutt</p>
+      <ul>
+        <li><a href="#">Sneakers</a></li>
+        <li><a href="#">Støvler</a></li>
+      </ul>
 
-    <p class="menu-subtitle">Handle etter størrelse</p>
-    <ul>
-      <li><a href="category.html?main_category=Shoes&gender=Kids&sizetype=Kids21-34">Barn (str. 21-34)</a></li>
-      <li><a href="category.html?main_category=Shoes&gender=Kids&sizetype=Kids35-42">Ungdom (str. 35-42)</a></li>
-    </ul>
+      <p class="menu-subtitle">Størrelser</p>
+      <ul>
+        <li><a href="#">Barn (21-34)</a></li>
+        <li><a href="#">Ungdom (35-42)</a></li>
+      </ul>
+    </div>
+
+    <div class="menu-section brands">
+      <h4>Toppmerker</h4>
+      <ul>
+        <li><a href="#">Nike</a></li>
+        <li><a href="#">adidas</a></li>
+        <li><a href="#">Skechers</a></li>
+        <li><a href="#">Vans</a></li>
+      </ul>
+    </div>
   </div>
+
 </div>
 
 
