--- a/mega-menu.html
+++ b/mega-menu.html
@@ -7,90 +7,111 @@
   <li data-menu="selfcare">Selfcare</li>
 </ul>
 
-<!-- ✅ MEGA-MENY – KLÆR -->
+<!-- ✅ KLÆR -->
 <div class="menu-panel" id="clothing">
 
-  <!-- ✅ Herre -->
-  <div class="menu-section">
-    <h4>Herre</h4>
-    <ul>
-      <li><a href="category.html?main_category=Clothing&gender=Men&subcategory=Hoodies">Gensere & hoodies</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Men&subcategory=Tshirts">T-skjorter</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Men&subcategory=Pants">Bukser</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Men&subcategory=Jeans">Jeans</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Men&subcategory=Jackets">Jakker</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Men&subcategory=Gymwear">Gymwear</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Men&subcategory=Dresswear">Dress & pentøy</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Men&subcategory=Underwear">Undertøy & sokker</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Men&subcategory=Sport">Sport</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Men&subcategory=Onepiece">Onepiece</a></li>
-    </ul>
+  <!-- Herre -->
+  <div class="menu-block">
+    <div class="menu-section">
+      <h4>Herre</h4>
+      <ul>
+        <li><a href="#">Gensere & hoodies</a></li>
+        <li><a href="#">T-skjorter</a></li>
+        <li><a href="#">Bukser</a></li>
+        <li><a href="#">Jeans</a></li>
+        <li><a href="#">Jakker</a></li>
+        <li><a href="#">Gymwear</a></li>
+        <li><a href="#">Dress & pentøy</a></li>
+        <li><a href="#">Undertøy & sokker</a></li>
+        <li><a href="#">Sport</a></li>
+        <li><a href="#">Onepiece</a></li>
+      </ul>
+    </div>
 
-    <p class="menu-subtitle">Populære merker</p>
-    <ul>
-      <li><a href="brands.html?brand=Gant">Gant</a></li>
-      <li><a href="brands.html?brand=Polo Ralph Lauren">Ralph Lauren</a></li>
-      <li><a href="brands.html?brand=Tommy Hilfiger">Tommy Hilfiger</a></li>
-      <li><a href="brands.html?brand=Tiger of Sweden">Tiger of Sweden</a></li>
-      <li><a href="brands.html?brand=Levi's">Levi’s</a></li>
-    </ul>
+    <div class="menu-section brands">
+      <h4>Toppmerker</h4>
+      <ul>
+        <li><a href="#">GANT</a></li>
+        <li><a href="#">Polo Ralph Lauren</a></li>
+        <li><a href="#">Dressmann</a></li>
+        <li><a href="#">Tiger of Sweden</a></li>
+        <li><a href="#">Levi's</a></li>
+      </ul>
+    </div>
   </div>
 
-  <!-- ✅ Dame -->
-  <div class="menu-section">
-    <h4>Dame</h4>
-    <ul>
-      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Outerwear">Jakker & blazere</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Knitwear">Cardigans</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Tops">T-skjorter & topper</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Dresses">Kjoler</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Jeans">Jeans</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Pants">Bukser</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Coats">Kåper</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Skirts">Skjørt</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Hoodies">Gensere & hoodies</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Sport">Sport</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Women&subcategory=Underwear">Undertøy & sokker</a></li>
-    </ul>
+  <!-- Dame -->
+  <div class="menu-block">
+    <div class="menu-section">
+      <h4>Dame</h4>
+      <ul>
+        <li><a href="#">Jakker & blazere</a></li>
+        <li><a href="#">Cardigans</a></li>
+        <li><a href="#">T-skjorter & topper</a></li>
+        <li><a href="#">Kjoler</a></li>
+        <li><a href="#">Jeans</a></li>
+        <li><a href="#">Bukser</a></li>
+        <li><a href="#">Kåper</a></li>
+        <li><a href="#">Skjørt</a></li>
+        <li><a href="#">Gensere & hoodies</a></li>
+        <li><a href="#">Undertøy & sokker</a></li>
+        <li><a href="#">Sport</a></li>
+      </ul>
+    </div>
 
-    <p class="menu-subtitle">Populære merker</p>
-    <ul>
-      <li><a href="brands.html?brand=Gant">Gant</a></li>
-      <li><a href="brands.html?brand=Levi's">Levi’s</a></li>
-      <li><a href="brands.html?brand=Hugo Boss">Hugo Boss</a></li>
-      <li><a href="brands.html?brand=Guess">Guess</a></li>
-      <li><a href="brands.html?brand=Only">ONLY</a></li>
-    </ul>
+    <div class="menu-section brands">
+      <h4>Toppmerker</h4>
+      <ul>
+        <li><a href="#">H&M</a></li>
+        <li><a href="#">GANT</a></li>
+        <li><a href="#">Nike</a></li>
+        <li><a href="#">NA-KD</a></li>
+        <li><a href="#">Only</a></li>
+      </ul>
+    </div>
   </div>
 
-  <!-- ✅ Barn -->
-  <div class="menu-section">
-    <h4>Barn</h4>
+  <!-- Barn -->
+  <div class="menu-block">
 
-    <p class="menu-subtitle">Jente</p>
-    <ul>
-      <li><a href="category.html?main_category=Clothing&gender=Kids&kidtype=Jente&subcategory=Outerwear">Yttertøy</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Kids&kidtype=Jente&subcategory=Knitwear">Gensere & cardigans</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Kids&kidtype=Jente&subcategory=Sport">Sport & trening</a></li>
-    </ul>
+    <div class="menu-section">
+      <h4>Barn</h4>
 
-    <p class="menu-subtitle">Gutt</p>
-    <ul>
-      <li><a href="category.html?main_category=Clothing&gender=Kids&kidtype=Gutt&subcategory=Outerwear">Yttertøy</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Kids&kidtype=Gutt&subcategory=Knitwear">Gensere & cardigans</a></li>
-      <li><a href="category.html?main_category=Clothing&gender=Kids&kidtype=Gutt&subcategory=Sport">Sport & trening</a></li>
-    </ul>
+      <p class="menu-subtitle">Jente</p>
+      <ul>
+        <li><a href="#">Yttertøy</a></li>
+        <li><a href="#">Gensere & cardigans</a></li>
+        <li><a href="#">Sport & trening</a></li>
+        <li><a href="#">Barn 98-134</a></li>
+        <li><a href="#">Ungdom 140-176</a></li>
+      </ul>
 
-    <p class="menu-subtitle">Populære merker</p>
-    <ul>
-      <li><a href="brands.html?brand=Name It">Name It</a></li>
-      <li><a href="brands.html?brand=Lindex">Lindex</a></li>
-      <li><a href="brands.html?brand=GAP">GAP</a></li>
-      <li><a href="brands.html?brand=Friboo">Friboo</a></li>
-      <li><a href="brands.html?brand=Tommy Hilfiger">Tommy Hilfiger</a></li>
-    </ul>
+      <p class="menu-subtitle">Gutt</p>
+      <ul>
+        <li><a href="#">Yttertøy</a></li>
+        <li><a href="#">Gensere & cardigans</a></li>
+        <li><a href="#">Sport & trening</a></li>
+        <li><a href="#">Barn 98-134</a></li>
+        <li><a href="#">Ungdom 140-176</a></li>
+      </ul>
+
+    </div>
+
+    <div class="menu-section brands">
+      <h4>Toppmerker</h4>
+      <ul>
+        <li><a href="#">Levi's®</a></li>
+        <li><a href="#">Name It</a></li>
+        <li><a href="#">Lindex</a></li>
+        <li><a href="#">GAP</a></li>
+        <li><a href="#">Tommy Hilfiger</a></li>
+      </ul>
+    </div>
+
   </div>
+
 </div>
+
 
 
 <!-- ✅ Sko -->
