--- a/mega-menu.html
+++ b/mega-menu.html
@@ -112,9 +112,6 @@
 
 </div>
 
-
-
-<!-- ✅ Sko -->
 <!-- ✅ SKO -->
 <div class="menu-panel" id="shoes">
 
@@ -213,52 +210,170 @@
 
 </div>
 
-
 <!-- ✅ Gymcorner -->
 <div class="menu-panel" id="gymcorner">
-  <div class="menu-section">
-    <h4>Kosttilskudd</h4>
-    <ul>
-      <li><a href="category.html?main_category=Gymcorner&subcategory=protein">Proteinpulver</a></li>
-      <li><a href="category.html?main_category=Gymcorner&subcategory=bars">Proteinbarer</a></li>
-      <li><a href="category.html?main_category=Gymcorner&subcategory=creatine">Kreatin</a></li>
-      <li><a href="category.html?main_category=Gymcorner&subcategory=pwo">PWO</a></li>
-      <li><a href="category.html?main_category=Gymcorner&subcategory=vitamins">Vitaminer</a></li>
-      <li><a href="category.html?main_category=Gymcorner&subcategory=drinks">Drikke</a></li>
-    </ul>
+
+  <!-- Supplements -->
+  <div class="menu-block">
+    <div class="menu-section">
+      <h4>Kosttilskudd</h4>
+      <ul>
+        <li><a href="#">Proteinpulver</a></li>
+        <li><a href="#">Proteinbarer</a></li>
+        <li><a href="#">Kreatin</a></li>
+        <li><a href="#">PWO (preworkout)</a></li>
+        <li><a href="#">Vitaminer & Mineraler</a></li>
+        <li><a href="#">Drikke</a></li>
+        <li><a href="#">Aminosyrer</a></li>
+      </ul>
+    </div>
+
+    <div class="menu-section brands">
+      <h4>Toppmerker</h4>
+      <ul>
+        <li><a href="#">Star Nutrition</a></li>
+        <li><a href="#">Barebells</a></li>
+        <li><a href="#">Proteinfabrikken</a></li>
+        <li><a href="#">Maxim</a></li>
+        <li><a href="#">YoungLA</a></li>
+      </ul>
+    </div>
   </div>
 
-  <div class="menu-section">
-    <h4>Utstyr</h4>
-    <ul>
-      <li><a href="category.html?main_category=Gymcorner&subcategory=equipment-electronics">Elektronikk</a></li>
-      <li><a href="category.html?main_category=Gymcorner&subcategory=bands">Strikker</a></li>
-      <li><a href="category.html?main_category=Gymcorner&subcategory=homegym">Hjemmetrening</a></li>
-      <li><a href="category.html?main_category=Gymcorner&subcategory=martial">Kampsport</a></li>
-      <li><a href="category.html?main_category=Gymcorner&subcategory=shakers">Shakers</a></li>
-    </ul>
+  <!-- Equipment -->
+  <div class="menu-block">
+    <div class="menu-section">
+      <h4>Utstyr</h4>
+      <ul>
+        <li><a href="#">Elektronikk</a></li>
+        <li><a href="#">Strikker</a></li>
+        <li><a href="#">Hjemmetrening</a></li>
+        <li><a href="#">Kampsport</a></li>
+        <li><a href="#">Massasjeverktøy</a></li>
+        <li><a href="#">Vannflasker & shakers</a></li>
+        <li><a href="#">Vekter & apparater</a></li>
+        <li><a href="#">Treningsbag</a></li>
+        <li><a href="#">Vektvest</a></li>
+      </ul>
+    </div>
+
+    <div class="menu-section brands">
+      <h4>Toppmerker</h4>
+      <ul>
+        <li><a href="#">Gorilla Wear</a></li>
+        <li><a href="#">Casall</a></li>
+        <li><a href="#">Adidas</a></li>
+        <li><a href="#">Titan</a></li>
+        <li><a href="#">Nike</a></li>
+      </ul>
+    </div>
   </div>
+
 </div>
 
-<!-- ✅ Tilbehør -->
+<!-- ✅ Accessories -->
 <div class="menu-panel" id="accessories">
-  <div class="menu-section">
-    <h4>Herre</h4>
-    <ul>
-      <li><a href="category.html?main_category=Accessories&gender=Men&subcategory=hats-men">Luer & caps</a></li>
-      <li><a href="category.html?main_category=Accessories&gender=Men&subcategory=belts-men">Belter</a></li>
-      <li><a href="category.html?main_category=Accessories&gender=Men&subcategory=sunglasses-men">Solbriller</a></li>
-    </ul>
+
+  <!-- Herre -->
+  <div class="menu-block">
+    <div class="menu-section">
+      <h4>Herre</h4>
+      <ul>
+        <li><a href="#">Luer & caps</a></li>
+        <li><a href="#">Tørklær & skjerf</a></li>
+        <li><a href="#">Hansker & votter</a></li>
+        <li><a href="#">Vesker & kofferter</a></li>
+        <li><a href="#">Smykker</a></li>
+        <li><a href="#">Solbriller</a></li>
+        <li><a href="#">Klokker</a></li>
+        <li><a href="#">Belter</a></li>
+        <li><a href="#">Lommebøker</a></li>
+        <li><a href="#">Slips & Tilbehør</a></li>
+        <li><a href="#">Vannflasker & mer</a></li>
+      </ul>
+    </div>
+
+    <div class="menu-section brands">
+      <h4>Toppmerker</h4>
+      <ul>
+        <li><a href="#">Ray-Ban</a></li>
+        <li><a href="#">Polo Ralph Lauren</a></li>
+        <li><a href="#">Tommy Hilfiger</a></li>
+        <li><a href="#">Casio</a></li>
+        <li><a href="#">HUGO</a></li>
+      </ul>
+    </div>
   </div>
 
-  <div class="menu-section">
-    <h4>Dame</h4>
-    <ul>
-      <li><a href="category.html?main_category=Accessories&gender=Women&subcategory=bags-women">Vesker</a></li>
-      <li><a href="category.html?main_category=Accessories&gender=Women&subcategory=jewelry-women">Smykker</a></li>
-      <li><a href="category.html?main_category=Accessories&gender=Women&subcategory=sunglasses-women">Solbriller</a></li>
-    </ul>
+  <!-- Dame -->
+  <div class="menu-block">
+    <div class="menu-section">
+      <h4>Dame</h4>
+      <ul>
+        <li><a href="#">Vesker</a></li>
+        <li><a href="#">Smykker</a></li>
+        <li><a href="#">Hatter & hodeskjerf</a></li>
+        <li><a href="#">Skjerf & sjal</a></li>
+        <li><a href="#">Solbriller</a></li>
+        <li><a href="#">Belter</a></li>
+        <li><a href="#">Klokker</a></li>
+        <li><a href="#">Lommebøker</a></li>
+        <li><a href="#">Hårpynt</a></li>
+        <li><a href="#">Bag charms</a></li>
+        <li><a href="#">Vannflasker & mer</a></li>
+      </ul>
+    </div>
+
+    <div class="menu-section brands">
+      <h4>Toppmerker</h4>
+      <ul>
+        <li><a href="#">Michael Kors</a></li>
+        <li><a href="#">Ray-Ban</a></li>
+        <li><a href="#">Gucci</a></li>
+        <li><a href="#">COACH</a></li>
+        <li><a href="#">Pilgrim</a></li>
+      </ul>
+    </div>
   </div>
+
+  <!-- Barn -->
+  <div class="menu-block">
+    <div class="menu-section">
+      <h4>Barn</h4>
+
+      <p class="menu-subtitle">Jente</p>
+      <ul>
+        <li><a href="#">Alle accessories</a></li>
+        <li><a href="#">Bager & sekker</a></li>
+        <li><a href="#">Luer & capser</a></li>
+        <li><a href="#">Tørklær & skjerf</a></li>
+        <li><a href="#">Hansker</a></li>
+        <li><a href="#">Klokker & smykker</a></li>
+      </ul>
+
+      <p class="menu-subtitle">Gutt</p>
+      <ul>
+        <li><a href="#">Alle accessories</a></li>
+        <li><a href="#">Bager & sekker</a></li>
+        <li><a href="#">Luer & capser</a></li>
+        <li><a href="#">Tørklær & skjerf</a></li>
+        <li><a href="#">Hansker</a></li>
+        <li><a href="#">Klokker & smykker</a></li>
+      </ul>
+    </div>
+
+    <div class="menu-section brands">
+      <h4>Toppmerker</h4>
+      <ul>
+        <li><a href="#">Polo Ralph Lauren</a></li>
+        <li><a href="#">Liewood</a></li>
+        <li><a href="#">Tartine et chocolat</a></li>
+        <li><a href="#">Guess</a></li>
+        <li><a href="#">Name It</a></li>
+      </ul>
+    </div>
+  </div>
+
 </div>
 
 <!-- ✅ Selfcare -->
