--- a/mega-menu.html
+++ b/mega-menu.html
@@ -378,14 +378,65 @@
 
 <!-- ✅ Selfcare -->
 <div class="menu-panel" id="selfcare">
-  <div class="menu-section">
-    <ul>
-      <li><a href="category.html?main_category=Selfcare&subcategory=face">Ansikt</a></li>
-      <li><a href="category.html?main_category=Selfcare&subcategory=body">Kroppspleie</a></li>
-      <li><a href="category.html?main_category=Selfcare&subcategory=deodorant">Deodorant</a></li>
-      <li><a href="category.html?main_category=Selfcare&subcategory=suncare">Solprodukter</a></li>
-      <li><a href="category.html?main_category=Selfcare&subcategory=hair-men">Hår (menn)</a></li>
-      <li><a href="category.html?main_category=Selfcare&subcategory=fragrance-men">Parfyme menn</a></li>
-    </ul>
+
+  <!-- 💄 Kategorier (unisex) -->
+  <div class="menu-block">
+    <div class="menu-section">
+      <h4>Kategorier</h4>
+      <ul>
+        <li><a href="#">Ansikt</a></li>
+        <li><a href="#">Kroppspleie</a></li>
+        <li><a href="#">Deodorant</a></li>
+        <li><a href="#">Aktiv hudpleie</a></li>
+        <li><a href="#">K-Beauty</a></li>
+        <li><a href="#">Solprodukter</a></li>
+        <li><a href="#">Beauty Tech</a></li>
+        <li><a href="#">Mamma & Barn</a></li>
+        <li><a href="#">Hudpleiesett</a></li>
+        <li><a href="#">Reisestørrelser</a></li>
+        <li><a href="#">Hudpleietilbehør</a></li>
+        <li><a href="#">Munnhygiene</a></li>
+      </ul>
+    </div>
+
+    <div class="menu-section brands">
+      <h4>Toppmerker</h4>
+      <ul>
+        <li><a href="#">Biotherm</a></li>
+        <li><a href="#">Rabanne</a></li>
+        <li><a href="#">Hugo Boss</a></li>
+        <li><a href="#">Versace Fragrance</a></li>
+        <li><a href="#">Parfums de Marly</a></li>
+      </ul>
+    </div>
   </div>
+
+  <!-- 👨 Herre focus (egen kolonne) -->
+  <div class="menu-block">
+    <div class="menu-section">
+      <h4>Menn</h4>
+      <ul>
+        <li><a href="#">Parfyme</a></li>
+        <li><a href="#">Barbering</a></li>
+        <li><a href="#">Skjegg & Bart</a></li>
+        <li><a href="#">Deodorant</a></li>
+        <li><a href="#">Hudpleie</a></li>
+        <li><a href="#">Hår</a></li>
+        <li><a href="#">Gavesett</a></li>
+      </ul>
+    </div>
+
+    <div class="menu-section brands">
+      <h4>Toppmerker</h4>
+      <ul>
+        <li><a href="#">HERMÈS</a></li>
+        <li><a href="#">Jean Paul Gaultier</a></li>
+        <li><a href="#">Valentino</a></li>
+        <li><a href="#">Armani</a></li>
+        <li><a href="#">Dolce&Gabbana</a></li>
+      </ul>
+    </div>
+  </div>
+
 </div>
+
