--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
 
     <!-- Toppmeny -->
     <nav class="top-links">
-      <a href="index.html">Hjem</a>
-      <a href="news.html">Nyheter</a>
-      <a href="brands.html">Brands</a>
-      <a href="favoritter.html">Favoritter</a>
-    </nav>
+  <a href="index.html">Hjem</a>
+  <a href="news.html">Nyheter</a>
+  <a href="brands.html">Brands</a>
+
+  <a href="favoritter.html" class="favorites-link">
+    ⭐ Favoritter
+    <span id="favorites-count">0</span>
+  </a>
+</nav>
+
 
   </div>
 
@@ -56,6 +61,7 @@
 
 </body>
 </html>
+
 
 
 
