--- a/brands.html
+++ b/brands.html
@@ -12,6 +12,9 @@
   <div class="nav-container">
 
     <a href="index.html" class="logo">BRANDRADAR</a>
+<a href="favoritter.html">
+  Favoritter <span id="favorites-count">0</span>
+</a>
 
     <div class="search-box">
       <input type="text" placeholder="Søk produkter eller merker..." />
