--- a/favoritter.html
+++ b/favoritter.html
@@ -23,7 +23,10 @@
       <a href="index.html">Hjem</a>
       <a href="news.html">Nyheter</a>
       <a href="brands.html">Brands</a>
-      <a href="favoritter.html">Favoritter</a>
+      <a href="favoritter.html">
+  Favoritter <span id="favorites-count">0</span>
+</a>
+
     </nav>
 
   </div>
