--- a/product.html
+++ b/product.html
@@ -22,8 +22,9 @@
       <a href="index.html">Hjem</a>
       <a href="news.html">Nyheter</a>
       <a href="brands.html">Brands</a>
-      <a href="favoritter.html">Favoritter</a>
-    </nav>
+       <a href="favoritter.html">
+  Favoritter <span id="favorites-count">0</span>
+</a>
 
   </div>
 
