--- a/product.html
+++ b/product.html
@@ -69,6 +69,14 @@
 
 </section>
 
+  <section class="related-products">
+  <h2>Du vil kanskje like</h2>
+  <div class="product-grid" id="related-grid">
+    <!-- Fylles med JS -->
+  </div>
+</section>
+
+
 <script src="script.js"></script>
 <script src="script-megamenu.js"></script>
 <script src="script-favorites.js"></script>
