--- a/product.html
+++ b/product.html
@@ -69,12 +69,22 @@
 
 </section>
 
-  <section class="related-products">
-  <h2>Du vil kanskje like</h2>
-  <div class="product-grid" id="related-grid">
-    <!-- Fylles med JS -->
+ <!-- ✅ RELATED PRODUCTS SLIDER -->
+<section class="related-section">
+  <h2 class="related-title">Du vil kanskje like</h2>
+
+  <div class="slider-wrapper">
+    
+    <button class="slider-btn prev">❮</button>
+    
+    <div class="related-slider" id="related-slider">
+      <!-- Dynamiske produktkort -->
+    </div>
+
+    <button class="slider-btn next">❯</button>
   </div>
 </section>
+
 
 
 <script src="script.js"></script>
