--- a/category.html
+++ b/category.html
@@ -46,10 +46,12 @@
 <!-- ✅ Manglet – MEGA-MENYEN LASTES HER -->
 <nav class="mega-menu"></nav>
 
-<!-- ✅ Dynamisk kategori-tittel -->
+<!-- ✅ Dynamisk breadcrumb + tittel -->
 <section class="category-header">
+  <nav class="breadcrumb"></nav>
   <h1 id="category-title">Laster kategori...</h1>
 </section>
+
 
 <!-- ✅ Produktgrid -->
 <section class="category-products">
