--- a/mega-menu.html
+++ b/mega-menu.html
@@ -414,7 +414,7 @@
   <!-- 👨 Herre focus (egen kolonne) -->
   <div class="menu-block">
     <div class="menu-section">
-      <h4>Menn</h4>
+      <h4>Herre</h4>
       <ul>
         <li><a href="#">Parfyme</a></li>
         <li><a href="#">Barbering</a></li>
