--- a/mega-menu.html
+++ b/mega-menu.html
@@ -56,6 +56,7 @@
         <li><a href="#">Gensere & hoodies</a></li>
         <li><a href="#">Undertøy & sokker</a></li>
         <li><a href="#">Sport</a></li>
+        <li><a href="#">Gymwear</a></li>
       </ul>
     </div>
 
