--- a/category.html
+++ b/category.html
@@ -52,6 +52,18 @@
   <h1 id="category-title">Laster kategori...</h1>
 </section>
 
+<!-- ✅ 🔥 Sorteringsbar legges her -->
+<div class="sort-bar">
+  <div class="result-count">Laster...</div>
+
+  <select id="sort-select">
+    <option value="popularity">Mest populære</option>
+    <option value="price_asc">Pris: Lav → Høy</option>
+    <option value="price_desc">Pris: Høy → Lav</option>
+    <option value="newest">Nyheter</option>
+    <option value="rating">Beste vurdering</option>
+  </select>
+</div>
 
 <!-- ✅ Produktgrid -->
 <section class="category-products">
