--- a/category.html
+++ b/category.html
@@ -73,9 +73,11 @@
   </p>
 </section>
 
+<script src="script-favorites.js"></script>
 <script src="script.js"></script>
 <script src="script-megamenu.js"></script>
 <script src="category.js"></script>
+
  
 
 </body>
