--- a/category.html
+++ b/category.html
@@ -52,6 +52,29 @@
   <h1 id="category-title">Laster kategori...</h1>
 </section>
 
+  <!-- ✅ Filter Bar -->
+  <div class="filter-bar">
+  <label>Merke:</label>
+  <select id="brand-filter">
+    <option value="all">Alle</option>
+  </select>
+
+  <label>Pris:</label>
+  <select id="price-filter">
+    <option value="all">Alle</option>
+    <option value="0-299">0–299</option>
+    <option value="300-599">300–599</option>
+    <option value="600-999">600–999</option>
+    <option value="1000+">1000+</option>
+  </select>
+
+  <label class="checkbox-label">
+    <input type="checkbox" id="discount-filter">
+    Kun tilbud
+  </label>
+</div>
+
+
 
 <!-- ✅ Produktgrid -->
 <section class="category-products">
