--- a/category.html
+++ b/category.html
@@ -51,27 +51,39 @@
   <nav class="breadcrumb"></nav>
   <h1 id="category-title">Laster kategori...</h1>
 </section>
+  
+ <!-- ✅ Filter + Sort Bar (Unified) -->
+<div class="filter-bar">
+  <div class="filters-left">
+    <label>Merke:</label>
+    <select id="brand-filter">
+      <option value="all">Alle</option>
+    </select>
 
-  <!-- ✅ Filter Bar -->
-  <div class="filter-bar">
-  <label>Merke:</label>
-  <select id="brand-filter">
-    <option value="all">Alle</option>
-  </select>
+    <label>Pris:</label>
+    <select id="price-filter">
+      <option value="all">Alle</option>
+      <option value="0-299">0–299</option>
+      <option value="300-599">300–599</option>
+      <option value="600-999">600–999</option>
+      <option value="1000+">1000+</option>
+    </select>
 
-  <label>Pris:</label>
-  <select id="price-filter">
-    <option value="all">Alle</option>
-    <option value="0-299">0–299</option>
-    <option value="300-599">300–599</option>
-    <option value="600-999">600–999</option>
-    <option value="1000+">1000+</option>
-  </select>
+    <label class="checkbox-label">
+      <input type="checkbox" id="discount-filter" />
+      Kun tilbud
+    </label>
+  </div>
 
-  <label class="checkbox-label">
-    <input type="checkbox" id="discount-filter">
-    Kun tilbud
-  </label>
+  <div class="filters-right">
+    <span class="result-count">Laster...</span>
+    <select id="sort-select">
+      <option value="featured">Anbefalt</option>
+      <option value="price-asc">Pris: lav → høy</option>
+      <option value="price-desc">Pris: høy → lav</option>
+      <option value="rating-desc">Best vurdert</option>
+    </select>
+  </div>
 </div>
 
 
