--- a/brands.html
+++ b/brands.html
@@ -49,6 +49,41 @@
     <input type="text" id="brandSearch" placeholder="Søk etter brand..." />
   </section>
 
+<!-- ✅ Brand Alphabet Filter -->
+<div class="brand-alphabet">
+  <span data-letter="all" class="active">Alle</span>
+  <span data-letter="A">A</span>
+  <span data-letter="B">B</span>
+  <span data-letter="C">C</span>
+  <span data-letter="D">D</span>
+  <span data-letter="E">E</span>
+  <span data-letter="F">F</span>
+  <span data-letter="G">G</span>
+  <span data-letter="H">H</span>
+  <span data-letter="I">I</span>
+  <span data-letter="J">J</span>
+  <span data-letter="K">K</span>
+  <span data-letter="L">L</span>
+  <span data-letter="M">M</span>
+  <span data-letter="N">N</span>
+  <span data-letter="O">O</span>
+  <span data-letter="P">P</span>
+  <span data-letter="Q">Q</span>
+  <span data-letter="R">R</span>
+  <span data-letter="S">S</span>
+  <span data-letter="T">T</span>
+  <span data-letter="U">U</span>
+  <span data-letter="V">V</span>
+  <span data-letter="W">W</span>
+  <span data-letter="X">X</span>
+  <span data-letter="Y">Y</span>
+  <span data-letter="Z">Z</span>
+  <span data-letter="Æ">Æ</span>
+  <span data-letter="Ø">Ø</span>
+  <span data-letter="Å">Å</span>
+</div>
+
+  
   <!-- HIGHLIGHTED BRANDS -->
   <section class="highlighted-brands">
     <h2>Fremhevede brands</h2>
