--- a/brand-page.html
+++ b/brand-page.html
@@ -52,6 +52,25 @@
   </div>
 </section>
 
+  <!-- ✅ Filter + Sort Bar for brand products -->
+<div class="brand-filter-bar">
+  <label>Kategori:</label>
+  <select id="category-filter">
+    <option value="all">Alle</option>
+  </select>
+
+  <label>Sorter:</label>
+  <select id="sort-select">
+    <option value="featured">Anbefalt</option>
+    <option value="price-asc">Pris: lav → høy</option>
+    <option value="price-desc">Pris: høy → lav</option>
+    <option value="rating-desc">Best vurdert</option>
+  </select>
+
+  <span class="result-count">0 produkter</span>
+</div>
+
+
 <section class="category-products">
   <h2>Produkter</h2>
   <div class="product-grid"></div>
