--- a/brand-page.html
+++ b/brand-page.html
@@ -46,11 +46,22 @@
     <a id="brand-site-btn" class="brand-site-btn" href="#" target="_blank">Besøk brand</a>
   </div>
 
-  <div class="brand-info">
-    <h1 id="brand-title">Laster brand...</h1>
+  <section class="brand-info-card">
+  <div class="brand-info-left">
+    <img id="brand-logo" alt="brand logo">
+  </div>
+
+  <div class="brand-info-right">
+    <h1 id="brand-title">Brand</h1>
     <p id="brand-description"></p>
+
+    <div class="brand-buttons">
+      <button id="favorite-brand-btn" class="brand-btn-outline">♡ Favoritt-brand</button>
+      <a id="brand-site-btn" class="brand-btn" target="_blank">Besøk brand</a>
+    </div>
   </div>
 </section>
+
 
   <!-- ✅ Filter + Sort Bar for brand products -->
 <div class="brand-filter-bar">
